[package]
name = "estim2b_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
estim2b_lib = { path = "estim2b_lib" , features=["usb", "virtual"] }
rocket = { version="0.5.0-rc.1", features=["json"] }