[package]
name = "estim2b_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
estim2b_lib = { path = "estim2b_lib" , features=["usb", "virtual"] }
rocket = { version="0.5.0-rc.1", features=["json"] }
evalexpr = { version="7.0.0", features=["serde_support", "regex_support"] }
clap = { version = "3.0.10", features = ["derive", "unicode", "wrap_help"] }